# SceneForge

./: .dockerignore  .env.example  CONTRIBUTING.md  Dockerfile  README.md  cli.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  build_report.md
.github/workflows/: ci.yml
docs/: architecture.md  docker.md  mcp_server.md  test_log.md
sceneforge/: __init__.py
sceneforge/colmap_runner/: __init__.py
sceneforge/engine/: __init__.py
sceneforge/fetcher/: __init__.py
sceneforge/mcp_server/: __init__.py
sceneforge/orchestrator/: __init__.py
sceneforge/validator/: __init__.py
sceneforge/viewer/: __init__.py
scripts/: generate_test_scene.py
tests/: test_modules.py
